@@ -1,10 +1,12 @@
 package com.sohwakmo.cucumbermarket.service;
 
+import com.sohwakmo.cucumbermarket.domain.Member;
 import com.sohwakmo.cucumbermarket.domain.Post;
 import com.sohwakmo.cucumbermarket.domain.Reply;
 import com.sohwakmo.cucumbermarket.dto.ReplyReadDto;
 import com.sohwakmo.cucumbermarket.dto.ReplyRegisterDto;
 import com.sohwakmo.cucumbermarket.dto.ReplyUpdateDto;
+import com.sohwakmo.cucumbermarket.repository.MemberRepository;
 import com.sohwakmo.cucumbermarket.repository.PostRepository;
 import com.sohwakmo.cucumbermarket.repository.ReplyRepository;
 import lombok.RequiredArgsConstructor;
@@ -13,6 +15,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -21,12 +24,14 @@ public class ReplyService {
 
     private final ReplyRepository replyRepository;
     private final PostRepository postRepository;
+    private final MemberRepository memberRepository;
 
     public Integer create(ReplyRegisterDto dto) { // 댓글 create 기능
         log.info("dto={}", dto);
 
         Post post = postRepository.findById(dto.getPostNo()).get();
-        Reply reply = Reply.builder().post(post).replyContent(dto.getReplyContent()).replier(dto.getReplier()).secretReply(dto.isSecretReply()).likeCount(dto.getLikeCount()).build();
+        Member member = memberRepository.findById(dto.getMemberNo()).get();
+        Reply reply = Reply.builder().post(post).member(member).replyContent(dto.getReplyContent()).replier(dto.getReplier()).secretReply(dto.isSecretReply()).likeCount(dto.getLikeCount()).build();
         reply = replyRepository.save(reply);
 
         return  reply.getReplyNo();
@@ -37,7 +42,7 @@ public class ReplyService {
 
         List<Reply> list = replyRepository.findByPostPostNoOrderByReplyNoDesc(postNo);
 
-        return list.stream().map(ReplyReadDto::fromEntity).toList();
+        return list.stream().map(ReplyReadDto::fromEntity).collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true) // detail 화면 보기 기능
